# muscle_app

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_english_translations.py  0003_add_exercise_videos.py  0004_add_exercise_steps.py
backend/app/: bootstrap.py  main.py
backend/app/api/v1/: deps.py  router.py
backend/app/application/dto/: nutrition.py  recommendation.py  workout.py
backend/app/application/use_cases/: exercise_use_cases.py  muscle_use_cases.py  nutrition_use_cases.py  recommend_exercises.py  workout_use_cases.py
backend/app/core/: config.py  logging.py  middleware.py  rate_limit.py
backend/app/domain/entities/: exercise.py  food.py  muscle.py  workout.py
backend/app/domain/ports/: ai.py  cache.py  repositories.py
backend/app/domain/value_objects/: enums.py
backend/app/infrastructure/ai/: embeddings.py  factory.py  llm.py
backend/app/infrastructure/cache/: factory.py  memory.py  redis_cache.py
backend/app/infrastructure/persistence/: database.py  seed.py  (+1 more)
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api.py  test_chat_api.py  test_repositories.py
backend/tests/unit/: test_ai_adapters.py  test_cache.py  test_config.py  test_entities.py  test_health.py  test_nutrition.py  test_recommend_exercises.py  test_use_cases.py
(+125 files in other folders)
